--- a/add_data.html
+++ b/add_data.html
@@ -13,15 +13,6 @@
 
     <script src="bower_components/modernizr/modernizr.js"></script>
 
-    <style>
-    #linechart svg{
-        width: 100%;
-        height: 400px;
-    }
-
-
-    </style>
-
   </head>
   <body>
 
@@ -80,24 +71,6 @@
                 </div>
               </div>
               <div class="row">
-                <div class="large-12 columns">
-                   <h6>Choose filters</h6>
-                   <div class="check-clear">
-                    <input id="year" type="text" placeholder="Year">
-                  </div>
-                  <div class="check-clear">
-                    <select id="country">
-                      <option value="">Country</option>
-                    </select>
-                  </div>
-                  <div class="check-clear">
-                    <select id="city">
-                      <option value="">City</option>
-                    </select>
-                  </div>
-                </div>
-              </div>
-              <div class="row">
                 <div class="large-12 columns margin-top">
                   <a id="go" href="#" class="small button secondary">Add and configure</a>
                 </div>
@@ -115,115 +88,271 @@
             <button class="close btn">Ok, I got it</button>
           </div>
 
-          <div class="row">
+          <!-- start van boxje -->
 
+          <div class="row">
             <div class="large-12 columns">
               <div class="panel datastream">
-                <div class="row">
-                  <div class="large-7 columns">
-                    <h1>A set of data</h1>
+
+                <div class="panel-header">
+                  <div class="row">
+                    <div class="large-7 columns">
+                      <h1>A set of data</h1>
+                    </div>
+                    <div class="large-5 columns text-right">
+                      <button class="btn configure">Configure</button>
+                      <div class="killbutton"><button class="btn alert kill">Delete</button></div>
+                    </div>
                   </div>
-                  <div class="large-5 columns text-right">
-                    <button class="btn">Configure</button>
-                    <button class="btn alert">Delete</button>
+                </div>
+
+                <div class="panel-content">
+                  <div class="row">
+                    <div class="large-12 columns">
+                      <input class="header-input" id="data-name" type="text" value="Dolly Dataset #1">
+                    </div>
+                  </div>
+                  <div class="row">
+                    <div class="large-12 columns margin-top">
+                      <h6>Set some filters</h6>
+                    </div>
+                  </div>
+                  <div class="row">
+                    <div class="large-2 columns">
+                      <input id="year" type="text" placeholder="From year">
+                    </div>
+                    <div class="large-2 columns">
+                      <input id="year" type="text" placeholder="To year">
+                    </div>
+                    <div class="large-4 columns">
+                      <select id="country">
+                        <option value="">Country</option>
+                      </select>
+                    </div>
+                    <div class="large-4 columns">
+                      <select id="city">
+                        <option value="">City</option>
+                      </select>
+                    </div>
+                  </div>
+
+                  <div class="row">
+                    <div class="large-12 columns margin-top">
+                      <h6>Select what you'd like to include</h6>
+                    </div>
+                  </div>
+
+                  <div class="row">
+                    <div class="large-4 columns">
+                      <select id="filter-group">
+                        <option value="">Filter terms by group</option>
+                        <option value="group1">Group 1</option>
+                      </select>
+                    </div>
+                    <div class="large-4 columns">
+                      <select id="filter-subgroup">
+                        <option value="">Filter terms by subgroup</option>
+                      </select>
+                    </div>
+                    <div class="large-4 columns">
+                    </div>
+                  </div>
+
+                  <div class="row">
+                    <div class="columns large-12">
+                      <table class="filters">
+                        <thead>
+                          <tr>
+                            <th><span>Select terms</span></th>
+                            <th></th>
+                            <th></th>
+                          </tr>
+                        </thead>
+                        <tbody>
+                          <tr>
+                            <td>
+                              <input id="checkbox1" type="checkbox" checked><label for="checkbox1">Checkbox 1</label></td>
+                            <td>
+                              <select id="">
+                                <option value="">Actions to apply</option>
+                                <option value="filter">Filter</option>
+                                <option value="something">Somehing</option>
+                              </select>
+                            </td>
+                            <td><input id="" type="text" placeholder="Filter by keywords"></td>
+                          </tr>
+                          <tr>
+                            <td><input id="checkbox2" type="checkbox" checked><label for="checkbox2">Checkbox 2</label></td>
+                            <td>
+                              <select id="">
+                                <option value="">Actions to apply</option>
+                                <option value="filter" selected>Filter</option>
+                                <option value="something">Somehing</option>
+                              </select>
+                            </td>
+                            <td><input id="" type="text" placeholder="Filter by keywords"></td>
+                          </tr>
+                          <tr>
+                            <td><input id="checkbox3" type="checkbox"><label for="checkbox3">Checkbox 3</label></td>
+                            <td>
+                              <select id="">
+                                <option value="">Actions to apply</option>
+                                <option value="filter">Filter</option>
+                                <option value="something">Somehing</option>
+                              </select>
+                            </td>
+                            <td><input id="" type="text" placeholder="Filter by keywords"></td>
+                          </tr>
+                        </tbody>
+                      </table>
+                    </div>
+                  </div>
+
+                  <div class="row">
+                    <div class="large-12 columns">
+                      <button class="btn save">Save</button>
+                      <button class="btn close secondary">Close</button>
+                    </div>
                   </div>
                 </div>
               </div>
             </div>
           </div>
 
+          <!-- eind boxje -->
+
+          <!-- start van boxje -->
+
           <div class="row">
             <div class="large-12 columns">
               <div class="panel datastream">
-                <div class="row">
-                  <div class="large-12 columns">
-                    <input class="header-input" id="data-name" type="text" value="Dolly Dataset #1">
-                  </div>
-                </div>
-                <div class="row">
-                  <div class="large-12 columns margin-top">
-                    <h6>Select filter to configure</h6>
-                  </div>
-                </div>
-                <div class="row">
-                  <div class="large-4 columns">
-                    <select id="filter-group">
-                      <option value="">Filter group</option>
-                    </select>
-                  </div>
-                  <div class="large-4 columns">
-                    <select id="filter-subgroup">
-                      <option value="">Filter subgroup</option>
-                    </select>
-                  </div>
-                  <div class="large-4 columns">
-                  </div>
-                </div>
-                <div class="row">
-                  <div class="large-12 columns margin-top">
-                    <h6>Select what you'd like to include</h6>
+
+                <div class="panel-header">
+                  <div class="row">
+                    <div class="large-7 columns">
+                      <h1>A set of data</h1>
+                    </div>
+                    <div class="large-5 columns text-right">
+                      <button class="btn configure">Configure</button>
+                      <div class="killbutton"><button class="btn alert kill">Delete</button></div>
+                    </div>
                   </div>
                 </div>
 
-                <div class="row">
-                  <div class="columns large-12">
-                    <table>
-                      <thead>
-                        <tr>
-                          <th>Terms</th>
-                          <th>Type of filtering</th>
-                          <th>Filter by keyword</th>
-                        </tr>
-                      </thead>
-                      <tbody>
-                        <tr>
-                          <td><input id="checkbox1" type="checkbox" checked=""><label for="checkbox1">Checkbox 1</label></td>
-                          <td>
-                            <select id="">
-                              <option value="">Filter</option>
-                            </select>
-                          </td>
-                          <td><input type="text"></td>
-                        </tr>
-                        <tr>
-                          <td><input id="checkbox2" type="checkbox"><label for="checkbox2">Checkbox 2</label></td>
-                          <td></td>
-                          <td></td>
-                        </tr>
-                        <tr>
-                          <td><input id="checkbox3" type="checkbox"><label for="checkbox3">Checkbox 3</label></td>
-                          <td></td>
-                          <td></td>
-                        </tr>
-                      </tbody>
-                    </table>
+                <div class="panel-content">
+                  <div class="row">
+                    <div class="large-12 columns">
+                      <input class="header-input" id="data-name" type="text" value="Dolly Dataset #1">
+                    </div>
                   </div>
-                </div>
+                  <div class="row">
+                    <div class="large-12 columns margin-top">
+                      <h6>Set some filters</h6>
+                    </div>
+                  </div>
+                  <div class="row">
+                    <div class="large-2 columns">
+                      <input id="year" type="text" placeholder="From year">
+                    </div>
+                    <div class="large-2 columns">
+                      <input id="year" type="text" placeholder="To year">
+                    </div>
+                    <div class="large-4 columns">
+                      <select id="country">
+                        <option value="">Country</option>
+                      </select>
+                    </div>
+                    <div class="large-4 columns">
+                      <select id="city">
+                        <option value="">City</option>
+                      </select>
+                    </div>
+                  </div>
 
-                <div class="row">
-                  <div class="large-12 columns">
-                    <button class="btn" id="save">Save</button>
+                  <div class="row">
+                    <div class="large-12 columns margin-top">
+                      <h6>Select what you'd like to include</h6>
+                    </div>
+                  </div>
+
+                  <div class="row">
+                    <div class="large-4 columns">
+                      <select id="filter-group">
+                        <option value="">Filter terms by group</option>
+                        <option value="group1">Group 1</option>
+                      </select>
+                    </div>
+                    <div class="large-4 columns">
+                      <select id="filter-subgroup">
+                        <option value="">Filter terms by subgroup</option>
+                      </select>
+                    </div>
+                    <div class="large-4 columns">
+                    </div>
+                  </div>
+
+                  <div class="row">
+                    <div class="columns large-12">
+                      <table class="filters">
+                        <thead>
+                          <tr>
+                            <th><span>Select terms</span></th>
+                            <th></th>
+                            <th></th>
+                          </tr>
+                        </thead>
+                        <tbody>
+                          <tr>
+                            <td>
+                              <input id="checkbox1" type="checkbox" checked><label for="checkbox1">Checkbox 1</label></td>
+                            <td>
+                              <select id="">
+                                <option value="">Actions to apply</option>
+                                <option value="filter">Filter</option>
+                                <option value="something">Somehing</option>
+                              </select>
+                            </td>
+                            <td><input id="" type="text" placeholder="Filter by keywords"></td>
+                          </tr>
+                          <tr>
+                            <td><input id="checkbox2" type="checkbox" checked><label for="checkbox2">Checkbox 2</label></td>
+                            <td>
+                              <select id="">
+                                <option value="">Actions to apply</option>
+                                <option value="filter" selected>Filter</option>
+                                <option value="something">Somehing</option>
+                              </select>
+                            </td>
+                            <td><input id="" type="text" placeholder="Filter by keywords"></td>
+                          </tr>
+                          <tr>
+                            <td><input id="checkbox3" type="checkbox"><label for="checkbox3">Checkbox 3</label></td>
+                            <td>
+                              <select id="">
+                                <option value="">Actions to apply</option>
+                                <option value="filter">Filter</option>
+                                <option value="something">Somehing</option>
+                              </select>
+                            </td>
+                            <td><input id="" type="text" placeholder="Filter by keywords"></td>
+                          </tr>
+                        </tbody>
+                      </table>
+                    </div>
+                  </div>
+
+                  <div class="row">
+                    <div class="large-12 columns">
+                      <button class="btn save">Save</button>
+                      <button class="btn close secondary">Close</button>
+                    </div>
                   </div>
                 </div>
               </div>
             </div>
           </div>
 
-          <div class="row">
-            <div class="large-12 columns">
-              <div class="panel datastream">
-                <div class="row">
-                  <div class="large-7 columns">
-                    <h1>Another dataset</h1>
-                  </div>
-                  <div class="large-5 columns text-right">
-                    <button class="btn">Configure</button>
-                    <button class="btn alert">Delete</button>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
+          <!-- eind boxje -->
 
         </div>
       </div>
