--- a/add_project.html
+++ b/add_project.html
@@ -13,15 +13,6 @@
 
     <script src="bower_components/modernizr/modernizr.js"></script>
 
-    <style>
-    #linechart svg{
-        width: 100%;
-        height: 400px;
-    }
-
-
-    </style>
-
   </head>
   <body>
 
@@ -56,17 +47,18 @@
 
       <div class="row margin-top">
         <div class="large-3 columns">
-          <div class="panel dashboard filters">
+          <div id="addproject" class="panel dashboard filters">
             <h5><i class="fa fa-tachometer"></i>Add a project</h5>
             <form>
               <div class="row">
                 <div class="large-12 columns">
-                   <div class="check-clear margin-top">
-                    <input id="project-name" type="text" placeholder="Project name">
+                   <div class="margin-top">
+                    <input class="margin-top" id="project-name" type="text" placeholder="Project name">
                   </div>
-                  <div class="check-clear">
-                    <select id="country">
+                  <div id="datastreams">
+                    <select id="datastreams0">
                       <option value="">Add data stream</option>
+                      <option value="stream1">Stream 1</option>
                     </select>
                   </div>
                 </div>
@@ -88,86 +80,129 @@
             <button class="close btn">Ok, I got it</button>
           </div>
 
-          <div class="row">
-            <div class="large-12 columns">
-              <div class="panel datastream">
-                <div class="row">
-                  <div class="large-7 columns">
-                    <h1>Project name</h1>
-                  </div>
-                  <div class="large-5 columns text-right">
-                    <button class="btn">Configure</button>
-                    <button class="btn alert">Delete</button>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
+          <!--start van het boxje -->
 
           <div class="row">
             <div class="large-12 columns">
               <div class="panel datastream">
-                <div class="row">
-                  <div class="large-12 columns">
-                    <input class="header-input" id="data-name" type="text" value="Another project">
+
+                <div class="panel-header">
+                  <div class="row">
+                    <div class="large-7 columns">
+                      <h1>Project name</h1>
+                    </div>
+                    <div class="large-5 columns text-right">
+                      <button class="btn configure">Configure</button>
+                      <div class="killbutton"><button class="btn alert kill">Delete</button></div>
+                    </div>
                   </div>
                 </div>
-                <div class="row">
-                  <div class="large-12 columns">
-                    <label>Change, add or remove data streams</label>
+
+                <div class="panel-content">
+                  <div class="row">
+                    <div class="large-12 columns">
+                      <input class="header-input" id="data-name" type="text" value="Another project">
+                    </div>
+                  </div>
+                  <div class="row">
+                    <div class="large-12 columns">
+                      <label>Change, add or remove data streams</label>
+                    </div>
+                  </div>
+                  <div class="streams">
+                    <div class="row stream datastream0 disabledelete">
+                      <div class="large-8 columns">
+                        <select>
+                          <option value="dolly1">Dolly Data #1</option>
+                          <option value="dolly2">Dolly Data #2</option>
+                        </select>
+                      </div>
+                      <div class="large-4 columns">
+                        <button class="btn alert tiny disabled">Delete</button>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="row">
+                    <div class="large-8 columns text-right">
+                      <button class="btn addstream"><i class="fa fa-plus"></i></button>
+                    </div>
+                  </div>
+                  <div class="row">
+                    <div class="large-12 columns">
+                      <button class="btn save">Save</button>
+                      <button class="btn close secondary">Close</button>
+                    </div>
                   </div>
                 </div>
-                <div class="row">
-                  <div class="large-8 columns">
-                    <select id="filter-group">
-                      <option value="">Dolly Data #1</option>
-                    </select>
-                  </div>
-                  <div class="large-4 columns">
-                    <button class="btn alert tiny">Delete</button>
-                  </div>
-                </div>
-                <div class="row">
-                  <div class="large-8 columns">
-                    <select id="filter-group">
-                      <option value="">Data data</option>
-                    </select>
-                  </div>
-                  <div class="large-4 columns">
-                    <button class="btn alert tiny">Delete</button>
-                  </div>
-                </div>
-                <div class="row">
-                  <div class="large-8 columns">
-                    <select id="filter-group">
-                      <option value="">Add another data stream</option>
-                    </select>
-                  </div>
-                </div>
-                <div class="row">
-                  <div class="large-12 columns">
-                    <button class="btn" id="save">Save</button>
-                  </div>
-                </div>
+
               </div>
             </div>
           </div>
 
+          <!-- eind van het boxje -->
+
+          <!--start van het boxje -->
+
           <div class="row">
             <div class="large-12 columns">
               <div class="panel datastream">
-                <div class="row">
-                  <div class="large-7 columns">
-                    <h1>Some project</h1>
-                  </div>
-                  <div class="large-5 columns text-right">
-                    <button class="btn">Configure</button>
-                    <button class="btn alert">Delete</button>
+
+                <div class="panel-header">
+                  <div class="row">
+                    <div class="large-7 columns">
+                      <h1>Project name</h1>
+                    </div>
+                    <div class="large-5 columns text-right">
+                      <button class="btn configure">Configure</button>
+                      <div class="killbutton"><button class="btn alert kill">Delete</button></div>
+                    </div>
                   </div>
                 </div>
+
+                <div class="panel-content">
+                  <div class="row">
+                    <div class="large-12 columns">
+                      <input class="header-input" id="data-name" type="text" value="Another project">
+                    </div>
+                  </div>
+                  <div class="row">
+                    <div class="large-12 columns">
+                      <label>Change, add or remove data streams</label>
+                    </div>
+                  </div>
+                  <div class="streams">
+                    <div class="row stream datastream0 disabledelete">
+                      <div class="large-8 columns">
+                        <select>
+                          <option value="dolly1">Dolly Data #1</option>
+                          <option value="dolly2">Dolly Data #2</option>
+                        </select>
+                      </div>
+                      <div class="large-4 columns">
+                        <button class="btn alert tiny disabled">Delete</button>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="row">
+                    <div class="large-8 columns text-right">
+                      <button class="btn addstream"><i class="fa fa-plus"></i></button>
+                    </div>
+                  </div>
+                  <div class="row">
+                    <div class="large-12 columns">
+                      <button class="btn save">Save</button>
+                      <button class="btn close secondary">Close</button>
+                    </div>
+                  </div>
+                </div>
+
               </div>
             </div>
           </div>
+
+          <!-- eind van het boxje -->
+
+
 
         </div>
       </div>
